update the application for new testers to practice
